--- a/components/o5kfukx9x-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/o5kfukx9x-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: o5kfukx9x-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:34b67bfb0f189243cae602924d1dfd58b89178f9@sha256:e19be4ffdfff335d4e834aa3479b113d68c923ad3792217aeadc29db50966b82
+          name: container-image
